# chronomancer

./: .gitignore  Cargo.toml  LICENSE  README.md  app.desktop  justfile
.github/: architectural-idioms.md  copilot-instructions.md  doctest-guide.md  icon-theming-notes.md  macro-explanations.md  ui-spacing-guide.md
.github/workflows/: ci.yml
.journal/: architectural-idioms.md  component-builder-pattern.md  doctest-guide.md  flatpak.md  integration-testing.md  iterator-patterns.md  message-architecture.md
.zed/: settings.json
flatpak/: com.github.kit-foxboy.chronomancer.yml  com.vulpineinteractive.chronomancer.yml  io.vulpapps.Chronomancer.json
i18n/en/: chronomancer.ftl
migrations/: 20251102050843_init.down.sql  20251102050843_init.up.sql  20251103063145_end-datetime-instead-of-duration.down.sql  20251103063145_end-datetime-instead-of-duration.up.sql  20251108002100_add-descriptor-and-type.down.sql  20251108002100_add-descriptor-and-type.up.sql
resources/: app.desktop  app.metainfo.xml  com.vulpineinteractive.chronomancer.metainfo.xml  io.vulpapps.Chronomancer.desktop  io.vulpapps.Chronomancer.metainfo.xml
scripts/: build-flatpak.sh  release.sh
src/: app.rs  app_messages.rs  i18n.rs  lib.rs  main.rs
src/components/: button_row.rs  icon_button.rs  icon_button_form.rs  list_header.rs  mod.rs  power_controls.rs  power_form.rs  quick_timers.rs  radio_components.rs  types.rs
src/components/list/: header.rs  header_form.rs  mod.rs
src/models/: mod.rs  power.rs  timer.rs
src/pages/: mod.rs  power_controls.rs  timer_list.rs
src/utils/: filters.rs  messages.rs  mod.rs  power.rs  resources.rs  time.rs
src/utils/database/: mod.rs  repository.rs  respository.rs  sqlite.rs
tests/: database_integration.rs  timer_integration.rs
(+2 files in other folders)
