[package]
name = "chronomancer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "An applet fonaging system timers"
repository = "https://github.com/kit-foxboy/chronomancer"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
constcat = "0.6.1"
dirs = "6.0.0"
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
notify-rust = "4.11.7"
open = "5.3.2"
rust-embed = "8.8.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
zbus = "5.12.0"
zvariant = "5.8.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # Run as applet in Cosmic desktop environment
    "applet",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
